[fix] flash message for exma portion, t() and add new locale lines

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -310,6 +310,8 @@ en:
     view: View Exams
     weight: Weight
   exam_portion:
+    plural: Exam Portions
+    singular: Exam Portion
     adjustments: Adjustments
     attached_file_count: Attached file count
     count: Exam portions count
