--- a/admissions/config/locales/en.yml
+++ b/admissions/config/locales/en.yml
@@ -12,6 +12,7 @@ en:
       exciting: "Exciting Applicant"
     create_multiple: "Create student entries and their admissions"
     create: "Create"
+    admitted_on: "Admitted on"
 
   admission_methods:
     singular: "Admission Method"
