--- a/core/config/locales/ja.yml
+++ b/core/config/locales/ja.yml
@@ -43,19 +43,38 @@ ja:
   assignments:
     description: 課題の説明
   attachment:
+    asset_error: 
     asset_type: アセットの種類
+    asset_upload: 
     assets: アセット
     create: アセットを登録
     description: アセット詳細
     file_name: ファイル名
     file_size: ファイルサイズ
     file_type: ファイル種類
+    list: 
     name: 名称
     new: アセットの登録
+    plural: 
+    singular: 
+  attendance_type:
+    add: 
+    auto_credit: 
+    color_code: 
+    counted_absent: 
+    credit_rate: 
+    disable_credit: 
+    edit: 
+    list: 
+    name: 
+    new: 
+    plural: 
+    save: 
+    singular: 
   back: 戻る
   birth: 生年月日
-  birth_and: と
-  birth_between: の間に生まれた
+  birth_and: 以下の生年月日まで
+  birth_between: 生年月日〜
   birth_date: 生年月日
   campus:
     add: キャンパスの追加
@@ -86,6 +105,8 @@ ja:
     save: クラスを保存
     show: クラス照会
     singular: クラス
+  class_group_course_enrollment:
+    save: 
   class_group_enrollment:
     count: 在籍数
     create: 在籍クラスを作成
@@ -170,9 +191,13 @@ ja:
     save: 授業グループを保存
     show: 授業グループ照会
     singular: 授業グループ
+  course_group_enrollment:
+    save: 
   csv:
     export: CSVで書き出し
     fields:
+      admitted: 
+      birth_date: 
       email: Eメール
       gender: 性別
       name: 名
@@ -191,7 +216,7 @@ ja:
       confirmed: アカウントを登録しました。
       send_instructions: 登録方法を数分以内にメールでご連絡します。
       send_paranoid_instructions: もしあなたのEメールアドレスが見つかった場合、本人確認についてのメールが数分以内に送られます。
-    email: 
+    email: Eメール
     failure:
       already_authenticated: 既にログインしています。
       inactive: アカウントがアクティベートされていません。
@@ -211,10 +236,10 @@ ja:
     omniauth_callbacks:
       failure: ! '%{kind} アカウントによる個人認証に失敗しました（%{reason}）。'
       success: ! '%{kind} アカウントによる個人認証に成功しました。'
-    password: 
-    password_confirmation: 
+    password: パスワード
+    password_confirmation: パスワード（確認用）
     passwords:
-      forgot: 
+      forgot: パスワードをお忘れの場合
       no_token: このページにはアクセスできません。パスワード復元メールのリンクをコピーした場合には、正しい URL かどうかをお確かめください。
       send_instructions: パスワードのリセット方法を数分以内にメールでご連絡します。
       send_paranoid_instructions: もしあなたのEメールアドレスが見つかった場合、パスワード復元用のメールが数分以内に送られます。
@@ -224,10 +249,10 @@ ja:
       destroyed: アカウントを削除しました。またのご利用をお待ちしております。
       inactive_signed_up: 
       reasons:
-        inactive: 
-        locked: 
-        unconfirmed: 
-      sign_up: 
+        inactive: 非アクティブ
+        locked: ロック
+        unconfirmed: 未確認
+      sign_up: サインアップ
       signed_up: ようこそ！ アカウント登録を受け付けました。
       signed_up_but_inactive: アカウント登録を受け付けました。しかしまだ有効化されておらず、ログインできません。
       signed_up_but_locked: アカウント登録を受け付けました。しかし、アカウントが凍結されているためログインできません。
@@ -235,9 +260,9 @@ ja:
       update_needs_confirmation: アカウント情報を変更しましたが、Eメールアドレスの本人確認用Eメールをお送りしましたので、中のリンクをクリックして証明してください。
       updated: アカウント情報を変更しました。
     sessions:
-      remember_me: 
-      sign_in: 
-      sign_out: 
+      remember_me: ログイン情報を記録する
+      sign_in: サインイン
+      sign_out: サインアウト
       signed_in: ログインしました。
       signed_out: ログアウトしました。
     unlocks:
@@ -361,12 +386,13 @@ ja:
       cancel: キャンセル
   hide: 非表示
   history: 履歴
+  id: 
   import_format: インポート形式
   language: 言語
   languages:
     en: English[英語]
     ja: 日本語
-  manage: 管理する
+  manage: 管理
   menu:
     admin:
       admin: 管理者
@@ -497,22 +523,22 @@ ja:
   student:
     add: 生徒を追加
     birth_and: と
-    birth_between: から
+    birth_between: 生年月日〜
     chosen_students: 生徒を選択
     class_group_enrollment: クラスに生徒を追加
     commute_method: 通勤手段
     create: 生徒を作成
     edit: 編集
     enroll: 生徒を追加
-    export: 生徒を書き出し
-    import: 生徒を読み込み
+    export: 生徒情報をCSVで書き出し
+    import: 生徒情報をCSVで登録
     list: 生徒一覧
     name: 生徒名
     new: 生徒を登録
     plural: 生徒
     registration:
       csv: CSVで生徒を登録
-      sheet: 出席番号を登録
+      sheet: 登録用のCSVをダウンロード
     show: 生徒照会
     singular: 生徒
   submit: 登録する
