add -none assigned- for class group in new student view

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -106,6 +106,7 @@ en:
     save: Save Class Group
     show: Show
     singular: Class Group
+    none_assigned: None Assigned
   class_group_enrollment:
     count: Enrollments count
     create: Create Class Enrollment
