--- a/core/config/locales/devise.en.yml
+++ b/core/config/locales/devise.en.yml
@@ -13,6 +13,7 @@ en:
 
   devise:
     login: 'Username or Email'
+    username: 'Username'
     email: "Email"
     password: "Password"
     password_confirmation: "Password Confirmation"
