admission phase exams v1

--- a/admissions/config/locales/en.yml
+++ b/admissions/config/locales/en.yml
@@ -47,6 +47,7 @@ en:
     plural: Admission Phases
     save: Save Admission Phase
     singular: Admission Phase
+    exam: Exam
   admissions:
     candidates:
       existing: Existing Applicant
