--- a/core/config/locales/ja.yml
+++ b/core/config/locales/ja.yml
@@ -1,4 +1,12 @@
 ja:
+  views:
+    pagination:
+      first: "&laquo; 最初"
+      last: "最後 &raquo;"
+      previous: "&lsaquo; 前"
+      next: "次 &rsaquo;"
+      truncate: "..."
+
   add: 追加
   address:
     add: 住所の追加
