--- a/admissions/config/locales/ja.yml
+++ b/admissions/config/locales/ja.yml
@@ -47,6 +47,7 @@ ja:
     plural: 入学フェーズ
     save: 入学フェーズを保存
     singular: 入学フェーズ
+    no_students:
   admissions:
     candidates:
       existing: 既登録入学希望者の追加
