--- a/admissions/config/locales/en.yml
+++ b/admissions/config/locales/en.yml
@@ -9,6 +9,8 @@ en:
     remove: Remove
     save: Save Admission Method
     singular: Admission Method
+    no_method: No methods available for this period.
+    no_period: Admission periods needed to view admission methods.
   admission_periods:
     add: Add Admission Period
     admitted_on: Admitted On
@@ -21,6 +23,7 @@ en:
     save: Save Admission Period
     seat_limit: Seat Limit
     singular: Admission Period
+    no_period: No period available.
   admission_phase_states:
     add: Add Admission Phase State
     auto_admit: Auto admit
