--- a/admissions/config/locales/ja.yml
+++ b/admissions/config/locales/ja.yml
@@ -9,6 +9,8 @@ ja:
     remove: 削除
     save: 入学形態を保存
     singular: 入学形態
+    no_method: 
+    no_period: 
   admission_periods:
     add: 入学時期を追加
     admitted_on: 入学日
@@ -21,6 +23,7 @@ ja:
     save: 入学時期を保存
     seat_limit: 席数制限(最大席数)
     singular: 入学時期
+    no_period: 
   admission_phase_states:
     add: 入学フェーズの状態
     auto_admit: 自動入学
