--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1,12 +1,4 @@
 en:
-  views:
-    pagination:
-      first: "&laquo; First"
-      last: "Last &raquo;"
-      previous: "&lsaquo; Prev"
-      next: "Next &rsaquo;"
-      truncate: "..."
-
   add: Add
   address:
     add: Add Address
@@ -109,11 +101,11 @@ en:
     name: Class Name
     new: New Class Group
     none: None
+    none_assigned: None Assigned
     plural: Class Groups
     save: Save Class Group
     show: Show
     singular: Class Group
-    none_assigned: None Assigned
   class_group_course_enrollment:
     save: Save Course to Class Group
   class_group_enrollment:
@@ -124,9 +116,7 @@ en:
     new: New class enrollment
     seat_number: Seat number
   class_group_management: Class Management
-  commute_method:
-    singular: Commute Method
-    add: Add Commute Method
+  commute_method: Commute Method
   commute_method_type:
     add: Add Commute Method Type
     edit: Edit Commute Method Type
@@ -141,7 +131,7 @@ en:
     close: Close
     help:
       language: Choose your Language
-    label: Label
+    label: Language & Locale
     save: Save
   confirm: Are you sure?
   confirm_delete: Really Delete this record?
@@ -237,6 +227,7 @@ en:
       timeout: Your session expired, please sign in again to continue.
       unauthenticated: You need to sign in or sign up before continuing.
       unconfirmed: You have to confirm your account before continuing.
+    login: Username or Email
     mailer:
       confirmation_instructions:
         subject: Confirmation instructions
@@ -251,7 +242,7 @@ en:
     password_confirmation: Password Confirmation
     passwords:
       forgot: Forgot your password?
-      no_token:
+      no_token: No Token
       send_instructions: You will receive an email with instructions about how to reset your password in a few minutes.
       send_paranoid_instructions: If your e-mail exists on our database, you will receive a password recovery link on your e-mail
       updated: Your password was changed successfully. You are now signed in.
@@ -265,10 +256,10 @@ en:
         unconfirmed: unconfirmed
       sign_up: Sign Up
       signed_up: Welcome! You have signed up successfully.
-      signed_up_but_inactive:
-      signed_up_but_locked:
-      signed_up_but_unconfirmed:
-      update_needs_confirmation:
+      signed_up_but_inactive: This account is inactive
+      signed_up_but_locked: This account has been locked
+      signed_up_but_unconfirmed: This account has not been confirmed
+      update_needs_confirmation: Registration update needs confirmation
       updated: You updated your account successfully.
     sessions:
       remember_me: Remember me
@@ -280,6 +271,7 @@ en:
       send_instructions: You will receive an email with instructions about how to unlock your account in a few minutes.
       send_paranoid_instructions: If your account exists, you will receive an email with instructions about how to unlock it in a few minutes.
       unlocked: Your account was successfully unlocked. You are now signed in.
+    username: Username
   edit: Edit
   email: Mail Address
   enroll_to_class: Enroll to class
@@ -574,11 +566,11 @@ en:
   surname: Surname
   surname_reading: Surname Reading
   syllabus:
-    import: Import Syllabuses
     code: Syllabus Code
     credits: Credits
     description: Course Description
     edit: Edit Syllabus
+    import: Import Syllabuses
     list: List Syllabuses
     name: Course Name
     name_sample: ! '[EX: Science A]'
@@ -591,3 +583,10 @@ en:
   title: Title
   user:
     info: User info
+  views:
+    pagination:
+      first: ! '&laquo; First'
+      last: Last &raquo;
+      next: Next &rsaquo;
+      previous: ! '&lsaquo; Prev'
+      truncate: ! '...'
