--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1,4 +1,20 @@
 en:
+
+  activerecord:
+    models:
+      gaku/student:
+        one: Student
+        other: Students
+
+  helpers:
+    page_entries_info:
+      one_page:
+        display_entries:
+          zero: "No %{entry_name} found"
+          one: "Displaying <b>1</b> %{entry_name}"
+          other: "Displaying <b>all %{count}</b> %{entry_name}"
+      more_pages:
+        display_entries: "Displaying %{entry_name} <b>%{first}&nbsp;-&nbsp;%{last}</b> of <b>%{total}</b> in total"
   views:
     pagination:
       first: "&laquo; First"
