[fix] view for admisions method show header and phases index

--- a/admissions/config/locales/en.yml
+++ b/admissions/config/locales/en.yml
@@ -11,6 +11,7 @@ en:
     singular: Admission Method
     no_method: No methods available for this period.
     no_period: Admission periods needed to view admission methods.
+    show: 'Show Admission Method'
   admission_periods:
     add: Add Admission Period
     admitted_on: Admitted On
