Applicant views/ students scopes

--- a/admissions/config/locales/en.yml
+++ b/admissions/config/locales/en.yml
@@ -59,10 +59,16 @@ en:
       list: Admission Candidates List
       new: New Applicant
       not_admitted: Not admitted
+    applicants: 
+      list: Admission Applicants List
     create: Create
     create_multiple: Create student entries and their admissions
     please_select_method: Please Select Admission Method
     please_select_period: Please Select Admission Period
+    go_to_admissions: Admissions
+    go_to_listing: Listing Admissions
+    go_to_applicants: Applicants List
+    admitted_on: Admitted On
   menu:
     admission_methods: Admission Methods
     admission_periods: Admission Periods
