[ajax/curd] Specialties Admin

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1,5 +1,5 @@
 en:
-  
+
   helpers:
     page_entries_info:
       one_page:
@@ -447,6 +447,7 @@ en:
           state: State
       school_details: School Details
       schools: Schools
+      specialties: Specialties
       system:
         backup: Backup
         system_tools: System Tools
@@ -599,6 +600,14 @@ en:
     save: Save Syllabus
     show: Show Syllabus
     singular: Syllabus
+  specialty:
+    edit: Edit Specialty
+    list: Specialties list
+    add: Add Specialty
+    singular: Specialty
+    description: Description
+    major_only: Major Only
+    name: Name
   teacher: Instructor
   title: Title
   user:
