--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -17,6 +17,20 @@ en:
       next: "Next &rsaquo;"
       truncate: "..."
 
+  changes:
+    student:
+      list: "Student Changes list"
+    student_address:
+      list: "Student Address Changes list"
+    student_contact:
+      list: "Student Contact Changes list"
+    from: "From"
+    to: "To"
+    changed_at: "Changed At"
+    event: "Event"
+    change: "Change"
+
+
   add: Add
   address:
     add: Add Address
@@ -421,6 +435,11 @@ en:
   manage: Manage
   menu:
     admin:
+      changes:
+        changes: "Changes and Deletions"
+        students: "Students"
+        student_addresses: "Student Addresses"
+        student_contacts: "Student Contacts"
       admin: Admin
       administration: Administration
       administrator: Administrator
