--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -627,6 +627,7 @@ en:
     description: Description
     major_only: Major Only
     name: Name
+    save: "Save Specialty"
   teacher: Instructor
   title: Title
   user:
