wip fixes in bactories, locales and admission specs

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -357,6 +357,7 @@ en:
     use_weighting: Use Weighting
     view: View Exams
     weight: Weight
+    exam_score: Exam Score
   exam_portion:
     adjustments: Adjustments
     attached_file_count: Attached file count
