--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -448,6 +448,7 @@ en:
         course_group: Course Group Disposals
         disposals: Disposals
         exam: Exam Disposals
+        student_address: Student Addresses Disposals
       preset:
         grading:
           grading_method: Grading Method
