--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -312,16 +312,16 @@ en:
   enrollment:
     plural: Enrollments
     singular: Enrollment
-  enrollment_status_type:
+  enrollment_status:
     active: Active
-    add: Add Enrollment Status Type
-    edit: Edin Enrollment Status Type
-    list: Enrollment Status Types list
+    add: Add Enrollment Status
+    edit: Edin Enrollment Status
+    list: Enrollment Statuses list
     name: Name
-    new: New Enrollment Status Type
-    plural: Enrollment Status Types
-    save: Save Enrollment Status Type
-    singular: Enrollment Status Type
+    new: New Enrollment Status
+    singular: Enrollment Status
+    plural: Enrollment Statuses
+    save: Save Enrollment Status
   errors:
     messages:
       already_confirmed: was already confirmed, please try signing in
@@ -475,7 +475,7 @@ en:
         attendance_types: Attendance Types
         commute_methods: Commute Methods
         contact: Contact Types
-        enrollment_status: Enrollment Status Types
+        enrollment_status: Enrollment Statuses
         types: Types & Methods
     class_group:
       management: Class Management
