--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1,36 +1,4 @@
 en:
-
-  helpers:
-    page_entries_info:
-      one_page:
-        display_entries:
-          zero: "No %{entry_name} found"
-          one: "Displaying <b>1</b> %{entry_name}"
-          other: "Displaying <b>all %{count}</b> %{entry_name}"
-      more_pages:
-        display_entries: "Displaying %{entry_name} <b>%{first}&nbsp;-&nbsp;%{last}</b> of <b>%{total}</b> in total"
-  views:
-    pagination:
-      first: "&laquo; First"
-      last: "Last &raquo;"
-      previous: "&lsaquo; Prev"
-      next: "Next &rsaquo;"
-      truncate: "..."
-
-  changes:
-    student:
-      list: "Student Changes list"
-    student_address:
-      list: "Student Address Changes list"
-    student_contact:
-      list: "Student Contact Changes list"
-    from: "From"
-    to: "To"
-    changed_at: "Changed At"
-    event: "Event"
-    change: "Change"
-
-
   add: Add
   address:
     add: Add Address
@@ -55,10 +23,10 @@ en:
     zipcode: ZIP Code
   admitted: Admitted On
   alert:
-    already_added: ! '%{resource} are already added!'
-    empty: ! '%{resource} is empty!'
+    already_added: "%{resource} are already added!"
+    empty: "%{resource} is empty!"
     not_selected: No %{resource} selected!
-  and: ! ' and '
+  and: " and "
   are_you_sure: Are you sure?
   assignment:
     add: Add Assignment
@@ -121,6 +89,18 @@ en:
     save: Save Campus
     singular: Campus
   cancel: Cancel
+  changes:
+    change: Change
+    changed_at: Changed At
+    event: Event
+    from: From
+    student:
+      list: Student Changes list
+    student_address:
+      list: Student Address Changes list
+    student_contact:
+      list: Student Contact Changes list
+    to: To
   class: Class
   class_group:
     add: Add Class Group
@@ -148,9 +128,7 @@ en:
     new: New class enrollment
     seat_number: Seat number
   class_group_management: Class Management
-  commute_method:
-    singular: Commute Method
-    add: Add Commute Method
+  commute_method: Commute Method
   commute_method_type:
     add: Add Commute Method Type
     edit: Edit Commute Method Type
@@ -197,7 +175,7 @@ en:
     add: Add Course
     choose: Choose Course
     code: Course Code
-    code_sample: ! '[EX: FALL2020]'
+    code_sample: "[EX: FALL2020]"
     combined_code: Combined Code
     count: Courses count
     edit: Edit Course
@@ -312,16 +290,16 @@ en:
   enrollment:
     plural: Enrollments
     singular: Enrollment
-  enrollment_status:
+  enrollment_status_type:
     active: Active
-    add: Add Enrollment Status
-    edit: Edin Enrollment Status
-    list: Enrollment Statuses list
+    add: Add Enrollment Status Type
+    edit: Edin Enrollment Status Type
+    list: Enrollment Status Types list
     name: Name
-    new: New Enrollment Status
-    singular: Enrollment Status
-    plural: Enrollment Statuses
-    save: Save Enrollment Status
+    new: New Enrollment Status Type
+    plural: Enrollment Status Types
+    save: Save Enrollment Status Type
+    singular: Enrollment Status Type
   errors:
     messages:
       already_confirmed: was already confirmed, please try signing in
@@ -330,7 +308,7 @@ en:
       not_locked: was not locked
       not_saved:
         one: ! '1 error prohibited this %{resource} from being saved:'
-        other: ! '%{count} errors prohibited this %{resource} from being saved:'
+        other: "%{count} errors prohibited this %{resource} from being saved:"
     not_uploaded: Error when upload %{resource}!
   exam:
     add: Add Exam
@@ -357,7 +335,6 @@ en:
     use_weighting: Use Weighting
     view: View Exams
     weight: Weight
-    exam_score: Exam Score
   exam_portion:
     adjustments: Adjustments
     attached_file_count: Attached file count
@@ -380,12 +357,12 @@ en:
   flash:
     actions:
       create:
-        notice: ! '%{resource_name} was successfully created!'
+        notice: "%{resource_name} was successfully created!"
       destroy:
-        alert: ! '%{resource_name} could not be destroyed!'
-        notice: ! '%{resource_name} was successfully destroyed!'
+        alert: "%{resource_name} could not be destroyed!"
+        notice: "%{resource_name} was successfully destroyed!"
       update:
-        notice: ! '%{resource_name} was successfully updated!'
+        notice: "%{resource_name} was successfully updated!"
   gender:
     choose: Choose Gender
     female: Female
@@ -432,15 +409,10 @@ en:
   language: Language
   languages:
     en: English
-    ja: 日本語[Japanese]
+    ja: "日本語[Japanese]"
   manage: Manage
   menu:
     admin:
-      changes:
-        changes: "Changes and Deletions"
-        students: "Students"
-        student_addresses: "Student Addresses"
-        student_contacts: "Student Contacts"
       admin: Admin
       administration: Administration
       administrator: Administrator
@@ -449,7 +421,6 @@ en:
         course_group: Course Group Disposals
         disposals: Disposals
         exam: Exam Disposals
-        student_address: Student Addresses Disposals
       preset:
         grading:
           grading_method: Grading Method
@@ -468,7 +439,6 @@ en:
           state: State
       school_details: School Details
       schools: Schools
-      specialties: Specialties
       system:
         backup: Backup
         system_tools: System Tools
@@ -476,7 +446,7 @@ en:
         attendance_types: Attendance Types
         commute_methods: Commute Methods
         contact: Contact Types
-        enrollment_status: Enrollment Statuses
+        enrollment_status: Enrollment Status Types
         types: Types & Methods
     class_group:
       management: Class Management
@@ -508,15 +478,15 @@ en:
     singular: Note
     title: Note Title
   notice:
-    added: ! '%{resource} has been successfully added!'
-    created: ! '%{resource} has been successfully created!'
-    destroyed: ! '%{resource} has been successfully destroyed!'
-    enrolled: ! '%{resource} has been successfully enrolled to %{to}!'
+    added: "%{resource} has been successfully added!"
+    created: "%{resource} has been successfully created!"
+    destroyed: "%{resource} has been successfully destroyed!"
+    enrolled: "%{resource} has been successfully enrolled to %{to}!"
     no_resource_assign_first: No %{resource}, assign one first
-    recovered: ! '%{resource} has been successfully recovered'
-    removed: ! '%{resource} has been successfully removed!'
-    updated: ! '%{resource} has been successfully updated!'
-    uploaded: ! '%{resource} has been successfully uploaded!'
+    recovered: "%{resource} has been successfully recovered"
+    removed: "%{resource} has been successfully removed!"
+    updated: "%{resource} has been successfully updated!"
+    uploaded: "%{resource} has been successfully uploaded!"
   num_enrolled: Number Enrolled
   options: Options
   order: Order
@@ -608,36 +578,27 @@ en:
   surname: Surname
   surname_reading: Surname Reading
   syllabus:
-    code: Syllabus Code
+    code: Code
     credits: Credits
     description: Course Description
     edit: Edit Syllabus
     import: Import Syllabuses
     list: List Syllabuses
     name: Course Name
-    name_sample: ! '[EX: Science A]'
+    name_sample: "[EX: Science A]"
     new: New Syllabus
     plural: Syllabuses
     save: Save Syllabus
     show: Show Syllabus
     singular: Syllabus
-  specialty:
-    edit: Edit Specialty
-    list: Specialties list
-    add: Add Specialty
-    singular: Specialty
-    description: Description
-    major_only: Major Only
-    name: Name
-    save: "Save Specialty"
   teacher: Instructor
   title: Title
   user:
     info: User info
   views:
     pagination:
-      first: ! '&laquo; First'
+      first: "&laquo; First"
       last: Last &raquo;
       next: Next &rsaquo;
-      previous: ! '&lsaquo; Prev'
-      truncate: ! '...'
+      previous: "&lsaquo; Prev"
+      truncate: "..."
