--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -64,7 +64,7 @@ en:
     counted_absent: Counted Absent
     credit_rate: Credit Rate
     disable_credit: Disable Credit
-    edit: Edin Attendance Type
+    edit: Edit Attendance Type
     list: Attendance Types list
     name: Name
     new: New Attendance Type
@@ -290,10 +290,20 @@ en:
   enrollment:
     plural: Enrollments
     singular: Enrollment
+  enrollment_status:
+    active: Active
+    add: Add Enrollment Status
+    edit: Edit Enrollment Status
+    list: Enrollment Statuses list
+    name: Name
+    new: New Enrollment Status
+    plural: Enrollment Statuses
+    save: Save Enrollment Status
+    singular: Enrollment Status
   enrollment_status_type:
     active: Active
     add: Add Enrollment Status Type
-    edit: Edin Enrollment Status Type
+    edit: Edit Enrollment Status Type
     list: Enrollment Status Types list
     name: Name
     new: New Enrollment Status Type
@@ -320,6 +330,7 @@ en:
     count: Exams Count
     description: Description
     edit: Edit Exam
+    exam_score: Exam Score
     grading_method: Grading Method
     list: Exams List
     name: Exam name
@@ -416,11 +427,17 @@ en:
       admin: Admin
       administration: Administration
       administrator: Administrator
+      changes:
+        changes: Changes and Deletions
+        student_addresses: Student Addresses
+        student_contacts: Student Contacts
+        students: Students
       disposals:
         attachment: Attachment Disposals
         course_group: Course Group Disposals
         disposals: Disposals
         exam: Exam Disposals
+        student_address: Student Addresses Disposals
       preset:
         grading:
           grading_method: Grading Method
@@ -439,6 +456,7 @@ en:
           state: State
       school_details: School Details
       schools: Schools
+      specialties: Specialties
       system:
         backup: Backup
         system_tools: System Tools
@@ -446,7 +464,7 @@ en:
         attendance_types: Attendance Types
         commute_methods: Commute Methods
         contact: Contact Types
-        enrollment_status: Enrollment Status Types
+        enrollment_status: Enrollment Statuses
         types: Types & Methods
     class_group:
       management: Class Management
@@ -552,6 +570,15 @@ en:
     starting: Starting
     uniqueness: have this semester added
   show: Show
+  specialty:
+    add: Add Specialty
+    description: Description
+    edit: Edit Specialty
+    list: Specialties list
+    major_only: Major Only
+    name: Name
+    save: Save Specialty
+    singular: Specialty
   student:
     add: Add Student
     birth_and: and
@@ -578,7 +605,7 @@ en:
   surname: Surname
   surname_reading: Surname Reading
   syllabus:
-    code: Code
+    code: Syllabus Code
     credits: Credits
     description: Course Description
     edit: Edit Syllabus
