--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -128,7 +128,9 @@ en:
     new: New class enrollment
     seat_number: Seat number
   class_group_management: Class Management
-  commute_method: Commute Method
+  commute_method:
+    plural: Commute Methods
+    singular: Commute Method
   commute_method_type:
     add: Add Commute Method Type
     edit: Edit Commute Method Type
