--- a/admissions/config/locales/ja.yml
+++ b/admissions/config/locales/ja.yml
@@ -1,82 +1,86 @@
 ja:
   admission_methods:
-    add: 入学形態を追加
-    edit: 入学形態を編集
-    list: 入学形態一覧
-    name: 形態名
-    new: 新しい入学形態
-    plural: 入学形態
-    remove: 削除
-    save: 入学形態を保存
-    singular: 入学形態
-    no_method: 
-    no_period: 
+    add: "入学形態を追加"
+    edit: "入学形態を編集"
+    list: "入学形態一覧"
+    name: "形態名"
+    new: "新しい入学形態"
+    no_method: "この期間には有効な入学方式がありません。"
+    no_period: "入学方式を選択しまたしが対応する期間がありません。"
+    plural: "入学形態"
+    remove: "削除"
+    save: "入学形態を保存"
+    show: "入学方式を表示"
+    singular: "入学形態"
   admission_periods:
-    add: 入学時期を追加
-    admitted_on: 入学日
-    edit: 入学時期を編集
-    list: 入学時期一覧
-    name: 入学時期名
-    new: 入学時期を追加
-    plural: 入学時期
-    rolling: 編入・転入・ローリング
-    save: 入学時期を保存
-    seat_limit: 席数制限(最大席数)
-    singular: 入学時期
-    no_period: 
+    add: "入学時期を追加"
+    admitted_on: "入学日"
+    edit: "入学時期を編集"
+    list: "入学時期一覧"
+    name: "入学時期名"
+    new: "入学時期を追加"
+    no_period: "有効な期間がありません。"
+    plural: "入学時期"
+    rolling: "編入・転入・ローリング"
+    save: "入学時期を保存"
+    seat_limit: "席数制限(最大席数)"
+    singular: "入学時期"
   admission_phase_states:
-    add: 入学フェーズの状態
-    auto_admit: 自動入学
-    auto_progress: 自動進行
-    can_admit: 入学可能
-    can_progress: 進学可能
-    edit: 入学フェーズの状態を編集
-    list: 入学フェーズの状態一覧
-    name: 状態名
-    new: 新しい入学フェーズ状態を登録
-    order: 優先順位
-    plural: 入学フェーズの状態
-    remove: 状態を削除
-    save: 入学フェーズの状態を保存
-    singular: 入学フェーズ状態
+    add: "入学フェーズの状態"
+    auto_admit: "自動入学"
+    auto_progress: "自動進行"
+    can_admit: "入学可能"
+    can_progress: "進行可能"
+    edit: "入学フェーズの状態を編集"
+    list: "入学フェーズの状態一覧"
+    name: "状態名"
+    new: "新しい入学フェーズ状態を登録"
+    order: "優先順位"
+    plural: "入学フェーズの状態"
+    remove: "状態を削除"
+    save: "入学フェーズの状態を保存"
+    singular: "入学フェーズ状態"
   admission_phases:
-    add: 入学フェーズを追加
-    edit: 入学フェーズを編集
-    list: 入学フェーズ一覧
-    name: 入学フェーズ名
-    new: 入学フェースを追加
-    order: 入学フェーズの順位
-    phase_handler: 入学フェーズハンドラー
-    plural: 入学フェーズ
-    save: 入学フェーズを保存
-    singular: 入学フェーズ
-    no_students:
+    add: "入学フェーズを追加"
+    edit: "入学フェーズを編集"
+    exam: "入学試験"
+    list: "入学フェーズ一覧"
+    name: "入学フェーズ名"
+    new: "入学フェースを追加"
+    no_students: "このフェーズには試験が登録されていますが、採点対象の生徒が存在しません。"
+    order: "入学フェーズの順位"
+    phase_handler: "入学フェーズハンドラー"
+    plural: "入学フェーズ"
+    save: "入学フェーズを保存"
+    singular: "入学フェーズ"
   admissions:
+    admitted_on: "入学日"
+    applicants:
+      list: "入学志願者一覧"
     candidates:
-      existing: 既登録入学希望者の追加
-      export: 出力
-      list: 入学希望者一覧
-      new: 新規入学生を登録 
-    create: 入学生を登録
-    create_multiple: 複数の入学生を登録
-    please_select_method: 入学形態を選択して下さい
-    please_select_period: 入学時期を選択して下さい
-    go_to_admissions:
-    go_to_listing:
-    go_to_applicants: 
-    admitted_on:
-    not_admitted:
-    status:
-    reg_date:
-  menu:
-    admission_methods: 入学形態
-    admission_periods: 入学時期
-    admissions: 入学処理
+      existing: "既登録入学希望者の追加"
+      export: "出力"
+      list: "入学希望者一覧"
+      new: "新規入学生を登録"
+    create: "入学生を登録"
+    create_multiple: "複数の入学生を登録"
+    go_to_admissions: "入学処理"
+    go_to_applicants: "志願者一覧"
+    go_to_listing: "入学情報"
+    not_admitted: "未入学"
+    please_select_method: "入学形態を選択して下さい"
+    please_select_period: "入学時期を選択して下さい"
+    reg_date: "志願登録日時"
+    status: "入学状態"
   exams:
-    grade:
-    exam_score:
-    not_graded: 
+    exam_score: "試験点数"
+    grade: "試験を採点"
+    not_graded: "未採点"
+  menu:
+    admission_methods: "入学形態"
+    admission_periods: "入学時期"
+    admissions: "入学処理"
   students:
-    status:
-    active:
-    deleted: 
+    active: "アクティブ"
+    deleted: "削除された生徒"
+    status: "生徒の状態"
