--- a/admissions/config/locales/en.yml
+++ b/admissions/config/locales/en.yml
@@ -5,13 +5,13 @@ en:
     list: Admission Methods list
     name: Method name
     new: New Admission Method
+    no_method: No methods available for this period.
+    no_period: Admission periods needed to view admission methods.
     plural: Admission Methods
     remove: Remove
     save: Save Admission Method
+    show: Show Admission Method
     singular: Admission Method
-    no_method: No methods available for this period.
-    no_period: Admission periods needed to view admission methods.
-    show: 'Show Admission Method'
   admission_periods:
     add: Add Admission Period
     admitted_on: Admitted On
@@ -19,12 +19,12 @@ en:
     list: Admission Periods list
     name: Period name
     new: New Admission PPeriod
+    no_period: No period available.
     plural: Admission Periods
     rolling: Rolling
     save: Save Admission Period
     seat_limit: Seat Limit
     singular: Admission Period
-    no_period: No period available.
   admission_phase_states:
     add: Add Admission Phase State
     auto_admit: Auto admit
@@ -43,44 +43,44 @@ en:
   admission_phases:
     add: Add Admission Phase
     edit: Edit Admission Phase
+    exam: Exam
     list: Admission Phases list
     name: Phase name
     new: New Admission Phase
+    no_students: This phase have exam assigned, but there are no students to grade
     order: Order
     phase_handler: Phase handler
     plural: Admission Phases
     save: Save Admission Phase
     singular: Admission Phase
-    exam: Exam
-    no_students: "This phase have exam assigned, but there are no students to grade"
   admissions:
+    admitted_on: Admitted On
+    applicants:
+      list: Admission Applicants List
     candidates:
       existing: Existing Applicant
       export: Export
       list: Admission Candidates List
       new: New Applicant
-    applicants: 
-      list: Admission Applicants List
     create: Create
     create_multiple: Create student entries and their admissions
+    go_to_admissions: Admissions
+    go_to_applicants: Applicants List
+    go_to_listing: Listing Admissions
+    not_admitted: Not admitted
     please_select_method: Please Select Admission Method
     please_select_period: Please Select Admission Period
-    go_to_admissions: Admissions
-    go_to_listing: Listing Admissions
-    go_to_applicants: Applicants List
-    admitted_on: Admitted On
-    not_admitted: Not admitted
-    status: Admission Status
     reg_date: Application Registration Date
+    status: Admission Status
+  exams:
+    exam_score: Exam Score
+    grade: Grade Exam
+    not_graded: Not Graded
   menu:
     admission_methods: Admission Methods
     admission_periods: Admission Periods
     admissions: Admissions
-  exams:
-    grade: Grade Exam
-    exam_score: Exam Score
-    not_graded: Not Graded
   students:
-    status: Student status
     active: Active
     deleted: Deleted
+    status: Student status
