[wip] ajax crud speciality in students#show

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -582,6 +582,9 @@ en:
     name: Name
     save: Save Specialty
     singular: Specialty
+    major: Major
+  student_specialty:
+    index: Student Specialty Index
   student:
     add: Add Student
     birth_and: and
