[js/ajax/view] finish specialty for students#show

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -584,6 +584,7 @@ en:
     singular: Specialty
     plural: Specialties
     major: Major
+    minor: Minor
     choose: Choose Specialty
   student_specialty:
     index: Student Specialty Index
