[fix] commute method for students#show

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -129,6 +129,7 @@ en:
     seat_number: Seat number
   class_group_management: Class Management
   commute_method:
+    edit: Edit Commute Method
     add: Add Commute Method
     plural: Commute Methods
     singular: Commute Method
